[package]
name = "unitrust"
version = "0.1.0"
authors = ["Robert Balicki <robert.balicki@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/rbalicki2/unitrust"
documentation = "https://github.com/rbalicki2/unitrust"
repository = "https://github.com/rbalicki2/unitrust"
readme = "README.md"
description = "Unit testing in Rust, obviously"

[dependencies]
